<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/heading" />


            <EditText
                android:id="@+id/player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:layout_marginBottom="2dp"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/q1" />

            <EditText
                android:id="@+id/q1Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/q1Ans_hint"
                android:inputType="textPersonName"
                android:layout_marginBottom="2dp"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/q2" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q2radioGroup">

                <RadioButton
                    android:id="@+id/option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="&lt;header1&gt;" />

                <RadioButton
                    android:id="@+id/option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="&lt;h1&gt;" />

                <RadioButton
                    android:id="@+id/option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="&lt;h4&gt;" />

                <RadioButton
                    android:id="@+id/option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="&lt;bigHeader&gt;" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/q3" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q3radioGroup">

                <RadioButton
                    android:id="@+id/q3radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="&lt;nl&gt;" />

                <RadioButton
                    android:id="@+id/q3radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="&lt;ol&gt;" />

                <RadioButton
                    android:id="@+id/q3radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="&lt;ul&gt;" />

                <RadioButton
                    android:id="@+id/q3radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="&lt;dd&gt;" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/q4" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q4radioGroup">

                <RadioButton
                    android:id="@+id/q4radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="&lt;bl&gt;" />

                <RadioButton
                    android:id="@+id/q4radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="&lt;ul&gt;" />

                <RadioButton
                    android:id="@+id/q4radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="&lt;ol&gt;" />

                <RadioButton
                    android:id="@+id/q4radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="&lt;bullet&gt;" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/q5radioGroup">

                <RadioButton
                    android:id="@+id/q5radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Yes" />

                <RadioButton
                    android:id="@+id/q5radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="No" />

                <RadioButton
                    android:id="@+id/q5radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Nothing like &lt;iframe&gt; exists." />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/q6" />

            <EditText
                android:id="@+id/q6Ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/q1Ans_hint"
                android:inputType="textPersonName"
                android:layout_marginBottom="2dp"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/q7" />

            <CheckBox
                android:id="@+id/q7checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="&lt;tr&gt;" />

            <CheckBox
                android:id="@+id/q7checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="&lt;datacell&gt;" />

            <CheckBox
                android:id="@+id/q7checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="&lt;td&gt;" />

            <CheckBox
                android:id="@+id/q7checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="&lt;tb&gt;" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q8" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:maxHeight="65dp"
            android:src="@drawable/funnydog"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/q8Ans"
            android:inputType="text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:onClick="submitQuiz"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>